<resources>
    <string name="app_name">Fuel Stats</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_refueling">Add Refueling</string>
    <string name="refueling_date">Refueling date</string>
    <string name="fuel_amount">Fuel amount</string>
    <string name="fuel_price">Fuel price</string>
    <string name="mileage">Mileage</string>
    <string name="default_currency">PLN/L</string>
    <string name="default_fuel_amount_unit">L</string>
    <string name="default_mileage_unit">km</string>
    <string name="fuel_type_on">Diesel</string>
    <string name="fuel_type_pb95">Pb95</string>
    <string name="fuel_type_pb98">Pb98</string>
    <string name="fuel_type_lpg">LPG</string>
    <string name="button_refueling_add">Add refueling</string>
    <string name="action_history">History</string>
    <string name="title_refueling_history_activity">Refueling history</string>
    <string name="title_settings_activity">Settings</string>

</resources>
