<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:stretchColumns="1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="net.rarvolt.fuelstats.AddRefuelingActivity"
    tools:showIn="@layout/activity_add_refueling">

    <TableRow>

        <TextView
            android:layout_marginEnd="@dimen/table_row_right_margin"
            android:layout_marginRight="@dimen/table_row_right_margin"
            android:gravity="end"
            android:text="@string/refueling_date"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/refueling_date"
            android:layout_span="2"
            android:editable="false"
            android:text="@string/refueling_date"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            style="@style/Base.Widget.AppCompat.EditText" />
    </TableRow>

    <TableRow>

        <RadioGroup
            android:id="@+id/fuel_type_group"
            android:orientation="horizontal"
            android:layout_span="3">

            <RadioButton
                android:id="@+id/fuel_type_on"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/fuel_type_on"
                android:checked="true" />

            <RadioButton
                android:id="@+id/fuel_type_pb95"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/fuel_type_pb95" />

            <RadioButton
                android:id="@+id/fuel_type_pb98"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/fuel_type_pb98" />

            <RadioButton
                android:id="@+id/fuel_type_lpg"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/fuel_type_lpg" />
        </RadioGroup>
    </TableRow>

    <TableRow>

        <TextView
            android:layout_marginEnd="@dimen/table_row_right_margin"
            android:layout_marginRight="@dimen/table_row_right_margin"
            android:gravity="end"
            android:text="@string/fuel_amount"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/fuel_amount"
            android:inputType="numberDecimal"
            android:imeOptions="flagNoExtractUi" />

        <TextView
            android:id="@+id/fuel_amount_unit"
            android:text="@string/default_fuel_amount_unit"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_marginEnd="@dimen/table_row_right_margin"
            android:layout_marginRight="@dimen/table_row_right_margin"
            android:gravity="end"
            android:text="@string/fuel_price"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/fuel_price"
            android:inputType="numberDecimal"
            android:imeOptions="flagNoExtractUi" />

        <TextView
            android:id="@+id/fuel_price_unit"
            android:text="@string/default_currency"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_marginEnd="@dimen/table_row_right_margin"
            android:layout_marginRight="@dimen/table_row_right_margin"
            android:gravity="end"
            android:text="@string/mileage"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/mileage"
            android:inputType="number"
            android:imeOptions="flagNoExtractUi" />

        <TextView
            android:id="@+id/mileage_unit"
            android:text="@string/default_mileage_unit"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
    </TableRow>

    <TableRow>

        <Button
            android:text="@string/button_refueling_add"
            android:layout_span="3"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin" />
    </TableRow>
</TableLayout>
